# jags-vonmises

./: Makefile.am  README  configure.ac
examples/simple/: vMtest.R  vMtest.bug
src/: Makefile.am  vonmises.cc
src/distributions/: DVonMises.cc  DVonMises.h  Makefile.am
src/functions/: DLogVonMisesFun.cc  DLogVonMisesFun.h  Makefile.am
win/: jags.nsi
